--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "homepage": "https://github.com/garmeeh/local-cors-proxy#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "chalk": "^2.3.2",
     "command-line-args": "^5.0.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
