--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@bjesuiter/local-cors-proxy",
-	"version": "1.1.0",
+	"version": "1.1.1-BETA.1",
 	"main": "./lib/index.js",
 	"scripts": {
 		"start": "node ./bin/lcp.js",
