--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"command-line-args": "^5.0.2",
 		"cors": "^2.8.4",
 		"express": "^4.16.3",
+		"gaxios": "^4.1.0",
 		"request": "^2.85.0"
 	},
 	"devDependencies": {
