--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.1.1-BETA.2",
 	"main": "./lib/index.js",
 	"scripts": {
-		"start": "node ./bin/lcp.js",
+		"start": "node -r esm ./bin/lcp.js",
 		"publish": "npm publish --access public",
 		"test": "echo \"No tests specified\" && exit 0"
 	},
@@ -31,6 +31,7 @@
 		"chalk": "^2.3.2",
 		"command-line-args": "^5.0.2",
 		"cors": "^2.8.4",
+		"esm": "^3.2.25",
 		"express": "^4.16.3"
 	},
 	"devDependencies": {
