--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 		"command-line-args": "^5.0.2",
 		"cors": "^2.8.4",
 		"esm": "^3.2.25",
-		"express": "^4.16.3"
+		"express": "^4.16.3",
+		"http-proxy-middleware": "^1.0.6",
+		"jsonfile": "^6.1.0"
 	},
 	"devDependencies": {
 		"prettier": "^2.2.1"
